unpackaged/main/default/objects/Lease_Rates__c/Lease_Rates__c.object-meta.xml
<CustomObject>
    <label>Lease Rates</label>
    <nameField>
        <label>Lease Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>