unpackaged/main/default/objects/Lease_Rates__c/fields/GA_Rate_1__c.field-meta.xml
<CustomField>
    <fullName>GA_Rate_1__c</fullName>
    <label>GA Rate 1</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>