unpackaged/main/default/objects/Lease_Rates__c/fields/GA_Rate_1_Payment_Threshold__c.field-meta.xml
<CustomField>
    <fullName>GA_Rate_1_Payment_Threshold__c</fullName>
    <label>GA Rate 1 Payment Threshold</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>