unpackaged/main/default/objects/Lease_Rates__c/fields/GA_Rate_2__c.field-meta.xml
<CustomField>
    <fullName>GA_Rate_2__c</fullName>
    <label>GA Rate 2</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>