unpackaged/main/default/objects/Lease_Rates__c/fields/Numeric_Term_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Term_in_Months__c</fullName>
    <label>Numeric Term in Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>