unpackaged/main/default/objects/Lease_Rates__c/fields/Opportunity_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Rate__c</fullName>
    <formula>GA_Rate_1__c  *  Rate_Markup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>