unpackaged/main/default/objects/Lease_Rates__c/fields/Rate_Markup__c.field-meta.xml
<CustomField>
    <fullName>Rate_Markup__c</fullName>
    <label>Rate Markup</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>