unpackaged/main/default/objects/Lease_Rates__c/fields/TSB_Rate__c.field-meta.xml
<CustomField>
    <fullName>TSB_Rate__c</fullName>
    <label>TSB Rate</label>
    <precision>17</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>