unpackaged/main/default/objects/Lease_Rates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Rate__c</columns>
    <columns>TSB_Rate__c</columns>
    <columns>GA_Rate_1__c</columns>
    <columns>GA_Rate_2__c</columns>
    <columns>GA_Rate_3__c</columns>
    <columns>Numeric_Term_in_Months__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>